<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 Felix Bechstein -->
<!--
		This file is part of WebSMS. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/connector_preferences" >

    <CheckBoxPreference
        android:key="enable"
        android:title="@string/connector_enable" />

    <EditTextPreference
        android:dependency="enable"
        android:key="password"
        android:title="@string/connector_appkey" />

    <PreferenceScreen
        android:key="appkey_help"
        android:title="@string/connector_appkey_help_title" />

    <Preference
        android:key="sms_length"
        android:summary="@string/connector_sms_length_hint"
        android:title="@string/connector_sms_length" />

    <PreferenceScreen
        android:key="new_account"
        android:summary="@string/connector_create_account_hint"
        android:title="@string/create_account_" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/connector_create_account_url" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="support"
        android:title="@string/connector_support" />

</PreferenceScreen>